force-app/main/default/objects/Step__c/Step__c.object-meta.xml
<CustomObject>
<description>Sequence step in a journey template or care pathway.</description>
<label>Step</label>
<nameField>
<displayFormat>{000000}</displayFormat>
<label>Step Name</label>
<type>AutoNumber</type>
</nameField>
<pluralLabel>Steps</pluralLabel>
<sharingModel>ReadWrite</sharingModel>
</CustomObject>