force-app/main/default/objects/Step__c/fields/Action_Type__c.field-meta.xml
<CustomField>
<fullName>Action_Type__c</fullName>
<label>Action Type</label>
<type>Picklist</type>
<required>true</required>
<valueSet>
<valueSetDefinition>
<value>
<fullName>Standard</fullName>
<default>true</default>
<label>Standard</label>
</value>
</valueSetDefinition>
</valueSet>
</CustomField>