force-app/main/default/objects/Step__c/fields/Journey_Template__c.field-meta.xml
<CustomField>
<fullName>Journey_Template__c</fullName>
<label>Journey Template</label>
<type>Lookup</type>
<required>true</required>
<referenceTo>Journey_Template__c</referenceTo>
</CustomField>