force-app/main/default/objects/Step__c/fields/Step_Number__c.field-meta.xml
<CustomField>
<fullName>Step_Number__c</fullName>
<label>Step Number</label>
<type>Number</type>
<required>true</required>
</CustomField>